# sinyalist

./: .gitignore  README.md  UPGRADE_REPORT.md  rapor.md
backend/: Cargo.toml  build.rs
backend/src/: main.rs
proto/: sinyalist_packet.proto
sinyalist_app/: .flutter-plugins-dependencies  .metadata  README.md  analysis_options.yaml  pubspec.yaml
sinyalist_app/.dart_tool/: package_config.json  package_graph.json
sinyalist_app/.dart_tool/chrome-device/Default/: BrowsingTopicsState  DIPS  Favicons  History  HubApps  Login Data  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  load_statistics.db
sinyalist_app/.dart_tool/chrome-device/Default/EdgeHubAppUsage/: EdgeHubAppUsageSQLite.db
sinyalist_app/.dart_tool/chrome-device/Default/EntityExtraction/: domains_config.json
sinyalist_app/.dart_tool/chrome-device/Default/Extension Rules/: LOG
sinyalist_app/.dart_tool/chrome-device/Default/Extension Scripts/: LOG
sinyalist_app/.dart_tool/chrome-device/Default/Extension State/: LOG
sinyalist_app/.dart_tool/chrome-device/Default/GCM Store/: LOG
sinyalist_app/.dart_tool/dartpad/: web_plugin_registrant.dart
sinyalist_app/.dart_tool/extension_discovery/: vs_code.json
sinyalist_app/android/: local.properties
sinyalist_app/android/app/: build.gradle
sinyalist_app/android/app/src/main/cpp/: CMakeLists.txt  seismic_detector.hpp  seismic_jni_bridge.cpp
sinyalist_app/ios/Runner/: AppDelegate.swift  Info.plist  SinyalistBackgroundManager.swift  SinyalistMeshController.swift  SinyalistSeismicEngine.swift
sinyalist_app/ios/Runner.xcodeproj/: project.pbxproj
sinyalist_app/lib/: main.dart
sinyalist_app/lib/core/bridge/: native_bridge.dart
sinyalist_app/lib/core/codec/: sms_codec.dart
sinyalist_app/lib/core/connectivity/: connectivity_manager.dart
sinyalist_app/lib/core/crypto/: keypair_manager.dart
sinyalist_app/lib/core/delivery/: delivery_state_machine.dart  ingest_client.dart
sinyalist_app/lib/core/location/: location_manager.dart
sinyalist_app/lib/core/sms/: sms_bridge.dart
sinyalist_app/lib/core/theme/: sinyalist_theme.dart
sinyalist_app/lib/screens/: home_screen.dart
sinyalist_app/test/: delivery_state_machine_test.dart  keypair_manager_test.dart  sms_codec_test.dart  widget_test.dart
sinyalist_app/web/: index.html  manifest.json
tools/loadtest/: Cargo.toml
tools/loadtest/src/: main.rs
(+56 files in other folders)
