[package]
name = "sinyalist-ingest"
version = "2.0.0"
edition = "2021"
description = "Sinyalist emergency packet ingestion server v2"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.5", features = ["compression-gzip", "cors", "trace"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
bytes = "1"
ed25519-dalek = { version = "2", features = ["std"] }

[build-dependencies]
prost-build = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
